GNOME Bugzilla – Bug 678407
GtkImage: fix get_property('stock')
Last modified: 2012-06-19 14:26:51 UTC
The code was trying to get icon's name instead of icon's stock-id.
Created attachment 216750 [details] [review] GtkImage: fix get_property('stock')
Patch got GTG for master and 3.4 branch by cosimoc Attachment 216750 [details] pushed as 7572325 - GtkImage: fix get_property('stock')